@@ -2,7 +2,7 @@ name = Webspark Content Callout
 description = Callout boxes of text with images or video to call attention to special content or reinforce branding.
 core = 7.x
 package = ASU Webspark
-version = 7.x-1.3-dev
+version = 7.x-1.5-dev
 project = webspark_content_callout
 dependencies[] = ctools
 dependencies[] = defaultconfig
@@ -10,36 +10,49 @@ dependencies[] = features
 dependencies[] = field_group
 dependencies[] = image
 dependencies[] = link
+dependencies[] = list
 dependencies[] = node
+dependencies[] = options
 dependencies[] = panelizer
 dependencies[] = strongarm
 dependencies[] = text
+dependencies[] = uuid
 dependencies[] = uuid_features
 dependencies[] = video_embed_field
+scripts[] = js/webspark_content_callout.js
+stylesheets[all][] = css/webspark_content_callout.css
 features[ctools][] = field_group:field_group:1
 features[ctools][] = strongarm:strongarm:1
 features[defaultconfig][] = field_default_fields:node-content_callout-field_callout_body
 features[defaultconfig][] = field_default_fields:node-content_callout-field_callout_button
 features[defaultconfig][] = field_default_fields:node-content_callout-field_callout_image
 features[defaultconfig][] = field_default_fields:node-content_callout-field_callout_video
+features[defaultconfig][] = strongarm:uuid_features_entity_node
 features[defaultconfig][] = strongarm:uuid_features_file_assets_path
+features[defaultconfig][] = strongarm:uuid_features_file_fieldable_panels_pane
+features[defaultconfig][] = strongarm:uuid_features_file_mode
+features[defaultconfig][] = strongarm:uuid_features_file_node
 features[features_api][] = api:2
 features[field_base][] = field_callout_body
 features[field_base][] = field_callout_button
 features[field_base][] = field_callout_image
+features[field_base][] = field_callout_media
 features[field_base][] = field_callout_video
 features[field_group][] = group_callout_opts|node|content_callout|form
 features[field_instance][] = node-content_callout-field_callout_body
 features[field_instance][] = node-content_callout-field_callout_button
 features[field_instance][] = node-content_callout-field_callout_image
+features[field_instance][] = node-content_callout-field_callout_media
 features[field_instance][] = node-content_callout-field_callout_video
 features[node][] = content_callout
 features[user_permission][] = administer panelizer node content_callout defaults
+features[user_permission][] = administer uuid
 features[user_permission][] = create content_callout content
 features[user_permission][] = delete any content_callout content
 features[user_permission][] = delete own content_callout content
 features[user_permission][] = edit any content_callout content
 features[user_permission][] = edit own content_callout content
+features[uuid_file_entity][] = 688dba04-cd25-4ca5-9e9a-d785aa68d1c8
 features[uuid_node][] = afcce62e-cfa8-4772-92f2-0e9d4a1f7b13
 features[uuid_node][] = deaddbe4-a635-426d-8859-e12bf8648ca2
 features[variable][] = additional_settings__active_tab_content_callout
